objects/TW1_Black_List__c.object
<CustomObject>
    <fields>
        <fullName>SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CPF__c</fullName>
        <externalId>true</externalId>
        <label>CPF do Contato</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Contato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Assistente de comercialização, Executivo de vendas</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Black Lists</relationshipLabel>
        <relationshipName>Black_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Black Lists</relationshipLabel>
        <relationshipName>Black_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Black List</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Nome da Black List</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Black Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>